Group tiles by word to fix line wrapping

--- a/style.css
+++ b/style.css
@@ -6,6 +6,10 @@ p {
     user-select: none;
 }
 
+div.word {
+    display: inline-block;
+}
+
 span.tile {
     width: 1.2em;
     height: 1.5em;
